--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,3 +1,4 @@
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
@@ -6,10 +7,10 @@
   </ion-toolbar>
 </ion-header>
 
+<!-- 
 <ion-content [fullscreen]="true">
   <ion-card>
     <ion-item>
-      <!-- <ion-img [src]="item.src"></ion-img> -->
       <ion-icon name="person-outline"></ion-icon>
       <ion-label>User detail</ion-label>
       <ion-button fill="outline" slot="end">Dashboard</ion-button>
@@ -39,4 +40,48 @@
   </ion-button>
   </div>
   
+</ion-content> -->
+
+<!-- upload image -->
+
+<div class="container py-5">
+
+  <!-- For demo purpose -->
+
+
+
+  <div class="row py-4">
+      <div class="col-lg-6 mx-auto">
+
+          <!-- Upload image input-->
+          <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
+              <input id="upload" type="file" onchange="readURL(this);" class="form-control border-0">
+              <label id="upload-label" for="upload" class="font-weight-light text-muted">Choose file</label>
+              <div class="input-group-append">
+                  <label for="upload" class="btn btn-light m-0 rounded-pill px-4"> <i class="fa fa-cloud-upload mr-2 text-muted"></i><small class="text-uppercase font-weight-bold text-muted">Choose file</small></label>
+              </div>
+          </div>
+
+          <!-- Uploaded image area-->
+          <div class="image-area mt-4"><img id="imageResult" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
+
+      </div>
+    </div>
+  </div>
+
+
+<ion-content *ngFor="let profile_data of profile_data">
+  <ion-title class="name">Name</ion-title>
+  <ion-input   class="name_input" disabled value="{{profile_data.full_name}}"></ion-input>
+
+  <ion-title class="email">Email</ion-title>
+  <ion-input   class="email_input" disabled value="{{profile_data.email}}"></ion-input>
+
+  <ion-title class="mobile_number">Mobile Number</ion-title>
+  <ion-input   class="mobile_number_input" disabled value="{{profile_data.mobile_number}}"></ion-input>
+
+  <div *ngIf="buttonLogout">
+    <ion-button class="logout_button" (click)="logout()">Logout
+  </ion-button>
+  </div>
 </ion-content>
